--- a/src/index.html
+++ b/src/index.html
@@ -7,58 +7,16 @@
     <link rel="stylesheet" href="../node_modules/pagedone/dist/pagedone.css">
     <script src="../node_modules/pagedone/dist/pagedone.js"></script>
     <link rel="stylesheet" href="css/output.css">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <!-- Header -->
-    <header class="py-5 lg:fixed w-full bg-white transition-all duration-500">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-      <div class="w-full flex flex-col lg:flex-row">
-        <div class="flex justify-between lg:flex-row">
-          <a href="/" class="flex items-center">
-            <!-- Replace with your logo -->
-            <img src="/path-to-your-logo.svg" alt="Logo" class="h-8">
-          </a>
-          <button data-collapse-toggle="navbar" type="button"
-            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-            aria-controls="navbar-default" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </button>
-        </div>
-        <nav class="hidden w-full lg:flex lg:pl-11 max-lg:py-4" id="navbar">
-          <ul class="flex lg:items-center flex-col max-lg:gap-4 mt-4 lg:mt-0 lg:flex-row max-lg:mb-4">
-            <li>
-              <a href="/" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Home</a>
-            </li>
-            <li>
-              <a href="/about" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Appointments</a>
-            </li>
-            <li>
-              <a href="/products" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Shop</a>
-            </li>
-            <li>
-              <a href="/features" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Contact</a>
-            </li>
-          </ul>
-          <div class="flex-1 flex justify-end items-center">
-            <div class="relative mr-4">
-              <input type="text" placeholder="Search products" class="pl-10 pr-4 py-2 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-              <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-              </svg>
-            </div>
-            <button class="bg-indigo-50 text-indigo-600 rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 py-3 px-6 text-sm hover:bg-indigo-100">Login</button>
-            <button class="bg-indigo-600 text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 py-3 px-6 text-sm ml-5 hover:bg-indigo-700">Sign up</button>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </header>
+<div id="header-placeholder"></div>
+    
 
     <!-- Hero Section -->
     <section class="bg-gray-100 py-20">
@@ -178,5 +136,19 @@
 
     <script src="js/main.js"></script>
     <script src="../node_modules/pagedone/dist/js/pagedone.min.js"></script>
+	<script>
+        // Load header and footer
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-placeholder').innerHTML = data;
+            });
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-placeholder').innerHTML = data;
+            });
+    </script>
     </body>
     </html>
