--- a/src/header.html
+++ b/src/header.html
@@ -1,50 +1,55 @@
-<!-- Header -->
-    <header class="py-5 lg:fixed w-full bg-white transition-all duration-500">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-      <div class="w-full flex flex-col lg:flex-row">
-        <div class="flex justify-between lg:flex-row">
-          <a href="/" class="flex items-center">
-            <!-- Replace with your logo -->
-            <img src="/path-to-your-logo.svg" alt="Logo" class="h-8">
-          </a>
-          <button data-collapse-toggle="navbar" type="button"
-            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-            aria-controls="navbar-default" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </button>
-        </div>
-        <nav class="hidden w-full lg:flex lg:pl-11 max-lg:py-4" id="navbar">
-          <ul class="flex lg:items-center flex-col max-lg:gap-4 mt-4 lg:mt-0 lg:flex-row max-lg:mb-4">
-            <li>
-              <a href="/" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Home</a>
-            </li>
-            <li>
-              <a href="/about" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Appointments</a>
-            </li>
-            <li>
-              <a href="/products" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Shop</a>
-            </li>
-            <li>
-              <a href="/features" class="text-gray-500 text-base lg:text-base font-medium hover:text-indigo-700 transition-all duration-500 mb-2 block lg:mr-6 md:mb-0 lg:text-left">Contact</a>
-            </li>
-          </ul>
-          <div class="flex-1 flex justify-end items-center">
-            <div class="relative mr-4">
-              <input type="text" placeholder="Search products" class="pl-10 pr-4 py-2 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-              <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-              </svg>
+<header class="bg-white border-b border-gray-100">
+    <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
+        <div class="flex items-center justify-between h-16 lg:h-[72px]">
+            <button type="button" class="p-2 -m-2 text-gray-900 transition-all duration-200 lg:hidden hover:text-gray-700">
+                <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
+
+            <div class="flex items-center flex-shrink-0 ml-4 lg:ml-0">
+                <a href="/" class="inline-flex rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">
+                    <span class="sr-only">Locbeat logo</span>
+                    <img src="/path-to-your-logo.svg" alt="Logo" class="h-8">
+                </a>
             </div>
-            <button class="bg-indigo-50 text-indigo-600 rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 py-3 px-6 text-sm hover:bg-indigo-100">Login</button>
-            <button class="bg-indigo-600 text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 py-3 px-6 text-sm ml-5 hover:bg-indigo-700">Sign up</button>
-          </div>
-        </nav>
-      </div>
+
+            <nav class="hidden lg:flex lg:items-center lg:justify-center flex-1">
+                <ul class="flex items-center space-x-8">
+                    <li>
+                        <a href="/" class="text-base font-medium text-gray-900 transition-all duration-200 rounded hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Home</a>
+                    </li>
+                    <li>
+                        <a href="/appointments" class="text-base font-medium text-gray-900 transition-all duration-200 rounded hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Appointments</a>
+                    </li>
+                    <li>
+                        <a href="/shop" class="text-base font-medium text-gray-900 transition-all duration-200 rounded hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Shop</a>
+                    </li>
+                    <li>
+                        <a href="/contact" class="text-base font-medium text-gray-900 transition-all duration-200 rounded hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="flex items-center justify-end space-x-5">
+                <button type="button" class="p-2 -m-2 text-gray-900 transition-all duration-200 hover:text-gray-700">
+                    <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                    </svg>
+                </button>
+
+                <button type="button" class="inline-flex items-center p-2 -m-2 text-gray-900 transition-all duration-200 lg:ml-6 hover:text-gray-700">
+                    <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
+                    </svg>
+                    <span class="inline-flex items-center justify-center w-5 h-5 ml-1 text-xs font-bold text-white bg-gray-600 rounded-full">2</span>
+                </button>
+
+                <div class="hidden lg:flex lg:items-center lg:space-x-4">
+                    <a href="#" class="text-base font-medium text-gray-900 transition-all duration-200 rounded hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Login</a>
+                    <a href="#" class="text-base font-medium text-white bg-gray-900 px-4 py-2 rounded transition-all duration-200 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Sign up</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </header>
+</header>
