Add new header component and update project structure

--- a/src/header.html
+++ b/src/header.html
@@ -32,24 +32,18 @@
             </nav>
 
             <div class="flex items-center justify-end space-x-5">
-                <button type="button" class="p-2 -m-2 text-gray-900 transition-all duration-200 hover:text-gray-700">
-                    <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                    </svg>
-                </button>
+                            <span class="hidden w-px h-6 bg-gray-200 lg:block" aria-hidden="true"></span>
 
-                <button type="button" class="inline-flex items-center p-2 -m-2 text-gray-900 transition-all duration-200 lg:ml-6 hover:text-gray-700">
-                    <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                    </svg>
-                    <span class="inline-flex items-center justify-center w-5 h-5 ml-1 text-xs font-bold text-white bg-gray-600 rounded-full">2</span>
-                </button>
+                            
+                            <span class="w-px h-6 bg-gray-200 lg:hidden" aria-hidden="true"></span>
 
-                <div class="hidden lg:flex lg:items-center lg:space-x-4">
-                    <a href="#" class="text-base font-medium text-gray-900 transition-all duration-200 rounded hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Login</a>
-                    <a href="#" class="text-base font-medium text-white bg-gray-900 px-4 py-2 rounded transition-all duration-200 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">Sign up</a>
-                </div>
-            </div>
+                            <button type="button" class="inline-flex items-center p-2 -m-2 text-gray-900 transition-all duration-200 lg:ml-6 hover:text-gray-700">
+                                <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
+                                </svg>
+                                <span class="inline-flex items-center justify-center w-5 h-5 ml-1 text-xs font-bold text-white bg-gray-600 rounded-full"> 2 </span>
+                            </button>
+                        </div>
         </div>
     </div>
 </header>
