--- a/src/footer.html
+++ b/src/footer.html
@@ -1,36 +1,45 @@
-<footer class="bg-gray-800 text-white py-8">
-    <div class="container mx-auto px-6">
-        <div class="flex flex-wrap justify-between">
-            <div class="w-full md:w-1/4 mb-6 md:mb-0">
-                <h3 class="text-xl font-bold mb-4">Locbeat</h3>
-                <p>Your trusted partner for eyebrow services and beauty products</p>
-            </div>
-            <div class="w-full md:w-1/4 mb-6 md:mb-0">
-                <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
-                <ul>
-                    <li><a href="#" class="hover:text-gray-300">Home</a></li>
-                    <li><a href="#" class="hover:text-gray-300">Shop</a></li>
-                    <li><a href="#" class="hover:text-gray-300">Appointments</a></li>
-                    <li><a href="#" class="hover:text-gray-300">Contact</a></li>
-                </ul>
-            </div>
-            <div class="w-full md:w-1/4 mb-6 md:mb-0">
-                <h4 class="text-lg font-semibold mb-4">Contact Us</h4>
-                <p>123 Main St, City, State 12345</p>
-                <p>Phone: (123) 456-7890</p>
-                <p>Email: info@locbeat.com</p>
-            </div>
-            <div class="w-full md:w-1/4">
-                <h4 class="text-lg font-semibold mb-4">Follow Us</h4>
-                <div class="flex space-x-4">
-                    <a href="#" class="hover:text-gray-300">Facebook</a>
-                    <a href="#" class="hover:text-gray-300">Instagram</a>
-                    <a href="#" class="hover:text-gray-300">Twitter</a>
-                </div>
-            </div>
-        </div>
-        <div class="mt-8 text-center">
-            <p>&copy; 2023 Locbeat. All rights reserved.</p>
-        </div>
+<footer class="bg-gray-50 py-10 sm:pt-16 lg:pt-24">
+  <div class="container mx-auto px-4">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+      <div>
+        <h2 class="text-2xl font-bold mb-2">Locbeat</h2>
+        <p class="text-gray-600">Your trusted partner for eyebrow services and beauty products</p>
+      </div>
+      
+      <div>
+        <h3 class="text-sm font-semibold tracking-wider text-gray-400 uppercase mb-4">Quick Links</h3>
+        <ul class="space-y-4">
+          <li><a href="#" class="text-base text-black transition-all duration-200 hover:text-blue-600 focus:text-blue-600">Home</a></li>
+          <li><a href="#" class="text-base text-black transition-all duration-200 hover:text-blue-600 focus:text-blue-600">Shop</a></li>
+          <li><a href="#" class="text-base text-black transition-all duration-200 hover:text-blue-600 focus:text-blue-600">Appointments</a></li>
+          <li><a href="#" class="text-base text-black transition-all duration-200 hover:text-blue-600 focus:text-blue-600">Contact</a></li>
+        </ul>
+      </div>
+      
+      <div>
+        <h3 class="text-sm font-semibold tracking-wider text-gray-400 uppercase mb-4">Contact Us</h3>
+        <ul class="space-y-4">
+          <li class="text-base text-black">123 Main St, City, State 12345</li>
+          <li class="text-base text-black">Phone: (123) 456-7890</li>
+          <li class="text-base text-black">Email: info@locbeat.com</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3 class="text-sm font-semibold tracking-wider text-gray-400 uppercase mb-4">Subscribe to our newsletter</h3>
+        <p class="text-base text-gray-500 mb-4">The latest news, articles, and resources, sent to your inbox weekly.</p>
+        <form class="flex flex-col sm:flex-row">
+          <label for="email-address" class="sr-only">Email address</label>
+          <input id="email-address" name="email-address" type="email" autocomplete="email" required class="w-full px-5 py-3 placeholder-gray-500 focus:ring-1 focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md" placeholder="Enter your email">
+          <button type="submit" class="mt-3 sm:mt-0 sm:ml-3 w-full sm:w-auto flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+            Subscribe
+          </button>
+        </form>
+      </div>
     </div>
+
+    <div class="mt-8 pt-8 border-t border-gray-200 text-center">
+      <p class="text-gray-600">&copy; 2024 Locbeat. All rights reserved.</p>
+    </div>
+  </div>
 </footer>
